@@ -1,5 +1,8 @@
 Fri Nov 29 11:47:57 1996  Samuel Tardieu  <sam@inf.enst.fr>
 
+	* xe_stubs.adb: Generate a call to Set_Boot_Server in elaboration
+	  file if protocol has been specified in configuration file.
+
 	* xe.ads: Default starter is now Ada instead of Shell.
 
 Thu Nov 28 23:56:12 1996  Samuel Tardieu  <sam@inf.enst.fr>
